GDB-10937 handle error on missing chat and other visual issues
## What
* Error in console when previously selected hat was deleted and page reloaded.
* Fixed issues with the chat panel vertical offset which caused the panel to overlap with the page footer when the page help is opened.

## Why
* When chat was selected but then deleted, it's id stays in the localstorage and when the page is loaded, then controller tries to load the chat which is no longer in the chat list.
* The chat panel offset did not account the case where the help message might occupy additional vertical space.

## How
* Added check in controller to prevent error when a chat that was persisted in the local storage but was in fact deleted from the chat list.
* Added dynamic vertical offset calculation based on if the help message is opened or not.

--- a/src/css/ttyg/ttyg.css
+++ b/src/css/ttyg/ttyg.css
@@ -3,6 +3,7 @@
     --toolbar-height: 37px;
     /* the gap between user and agent as well as between agent and agent messages */
     --message-gap: 1.5rem;
+    --chat-panel-height-offset: 13em;
 }
 
 @media (max-width: 1440px) {
@@ -131,10 +132,18 @@ chat area
 .ttyg-view .chat-content .chat {
     max-width: calc(800px + 2rem);
     margin: auto;
-    height: calc(100vh - 13em);
+    height: calc(100vh - var(--chat-panel-height-offset));
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.ttyg-view .chat-content .chat .selected-chat-panel {
+    height: calc(100vh - var(--chat-panel-height-offset));
+}
+
+.ttyg-view.help-visible .chat-content .chat .selected-chat-panel {
+    height: calc(100vh - var(--chat-panel-height-offset) + 3em);
 }
 
 .ttyg-view .controls {
@@ -144,8 +153,4 @@ chat area
 
 .ttyg-view agent-select-menu {
     width: 300px;
-}
-
-.selected-chat-panel {
-    height: 100%;
 }
